spade-tests/src/snapshots/spade_tests__wordlength_inference__multiplication_and_addition_aaia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f<a, b>(a: int<4>, b: int<4>) -> int<0> {
  a * b + a + b
}
entity main(clk: clock, rst: bool) -> int<0> { f(0, 0) }


error: The wordlength isn't what we infered it to - inference got 2 bits and you claimed 0 bits
  ┌─ testinput:4:48
  │
4 │ entity main(clk: clock, rst: bool) -> int<0> { f(0, 0) }
  │                                                ^^^^^^^ Here 2 bits were infered


